update form register

--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -14,6 +14,7 @@
 		"required": "El campo es obligatorio",
 		"email": "Format incorrecte",
 		"pattern": "Format incorrecte",
+		"notSamePassword": "Las contraseñas no coinciden",
 		"whiteSpaceLine": "Format incorrecte",
 		"maxlength": "Has excedit el màxim de caràcters",
 		"minlength": "Format incorrecte",
