--- a/frontend/src/assets/i18n/es.json
+++ b/frontend/src/assets/i18n/es.json
@@ -12,13 +12,13 @@
 		"campNumericMajor0": "El camp numèric ha de ser major a 0",
 		"campMalFormat": "Format del camp incorrecte",
 		"required": "El campo es obligatorio",
-		"email": "Format incorrecte",
+		"email": "Formato incorrecto",
 		"ageError": "Edad no permitida",
-		"pattern": "Format incorrecte",
+		"pattern": "Formato incorrecto",
 		"notSamePassword": "Las contraseñas no coinciden",
-		"whiteSpaceLine": "Format incorrecte",
+		"whiteSpaceLine": "Formato incorrecto",
 		"maxlength": "Has excedit el màxim de caràcters",
-		"minlength": "Format incorrecte",
+		"minlength": "Formato incorrecto",
 		"maxlengthPermes": "Has arribat al màxim de caràcters",
 		"valueNoExist": "El valor introduït no existeix a la llista",
 		"introducedValueNoExist": "El requisit no existeix",
